commit
added some of the database